[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2photos"
version = "0.1.0"
description = "Apple Photos search script using OpenAI-compatible API and SQLite queries"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "pandas",
    "openai",
    "osxphotos",
]

[project.urls]
Homepage = "https://github.com/micahyoung/text2photos"
Repository = "https://github.com/micahyoung/text2photos"
Issues = "https://github.com/micahyoung/text2photos/issues"

[project.scripts]
text2photos = "text2photos:main"

[tool.setuptools]
py-modules = ["text2photos"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true